<resources>
    <string name="app_name">Propiedades de Guitarra</string>
    <string name="title_propiedades_cuerda">Propiedades Cuerda</string>
    <string name="title_propiedades">Propiedades</string>
    <string name="title_configuraciones">Configuraciones</string>
    <string name="title_guardar">Cargar/Guardar</string>

    <string name="cuerda_seleccion_title">Seleccione la cuerda</string>
    <string name="fragment_propiedades">Propiedades Generales</string>

    <string-array name="cuerda_seleccion">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>


    <!--  DeviceListActivity -->
    <string name="scanning">buscando dispositivos...</string>
    <string name="select_device">seleccione un dispositivo</string>
    <string name="none_paired">No hay dispositivos conectados</string>
    <string name="none_found">No hay dispositivos</string>
    <string name="title_paired_devices">Dispositivos conectados</string>
    <string name="title_other_devices">Otros dispositivos disponibles</string>
    <string name="button_scan">Buscar dispositivos</string>
    <string name="bluetooth_no_available">El adaptador Bluetooth no está disponible</string>
    <string name="delete_confirm">Seguro desea eliminar?</string>
    <string name="delete_unique_confirm">Eliminando el último archivo se creara otro llamado \'default\' con valores pre-cargados. Desea continuar?</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="bt_connected">Conectado a dispositivo:</string>
    <string name="bt_connecting">Conectando ...</string>
    <string name="bt_error">Hubo un error al conectar - Error:</string>
</resources>
