<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_propiedades_cuerda"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_propiedades_cuerda" />

    <item
        android:id="@+id/navigation_propiedades"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_propiedades" />

    <item
        android:id="@+id/navigation_configuraciones"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_configuraciones" />

    <item
        android:id="@+id/navigation_cargar_guardar"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/title_guardar" />

</menu>
